--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 .app {
   max-width: 1200px;
   margin: 0px auto;
-  margin-bottom: 16px;
+  padding: 16px 16px;
 }
 
 .alert {
   width: 100%;
+  margin-bottom: 12px;
 }
 
 .user-table {
@@ -13,6 +14,11 @@
 }
 
 .search {
-  margin: 12px auto;
+  margin-bottom: 12px;
   max-width: 1200px;
+}
+
+.sortpag {
+  display: flex;
+  justify-content: space-between;
 }
